# rusty_sadl

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: base64whenjson.rs  ffi.rs  keys.rs  lib.rs
src/examples/: main.c  main.rs
src/rusty_sadl/: ffi.rs
