[package]
name = "rusty_sadl"
version = "0.1.2"
authors = ["Gert Dreyer <gertdreyer@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_sadl"
crate_type = ["cdylib", "lib"]

[dependencies]
rsa = {path="./RSA"}
base64 = "0.13.0"
rand = "0.8.4"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
chrono= {version="0.4.19", features = ["serde"]}
serde = {version="1.0.130",features = ["derive"]}
serde_json = "1.0.68"
safer-ffi = { version = "*", features = ["proc_macros"] }
serde_bytes = "0.11.5"
[features]
c-headers = ["safer-ffi/headers"]